--- a/src/assets/css/main.css
+++ b/src/assets/css/main.css
@@ -469,7 +469,7 @@ select.form-control.form-custom {
     transition: .2s ease-out;
     touch-action: manipulation;
     cursor: pointer;
-    background-color: #f1f2f3;
+    /* background-color: #f1f2f3; */
     box-shadow: 0px 5px 20px 0 rgba(0, 0, 0, 0.1);
     will-change: opacity, transform;
     transition: all 0.3s ease-out;
@@ -488,8 +488,8 @@ select.form-control.form-custom {
 .btn:hover,
 .btn:focus {
     color: #3b3f5c;
-    background-color: #f1f2f3;
-    border-color: #d3d3d3;
+    /* background-color: #f1f2f3; */
+    /* border-color: #d3d3d3; */
     -webkit-box-shadow: none;
     -moz-box-shadow: none;
     box-shadow: none;
