--- a/src/assets/css/structure.css
+++ b/src/assets/css/structure.css
@@ -78,7 +78,7 @@ code { color: #e7515a; }
     position: relative;
     width: 50%;
     flex-grow: 8;
-    margin-top: 106px;
+    margin-top: 54px;
     margin-bottom: 0;
     margin-left: 212px;
     transition: .600s;
@@ -733,7 +733,7 @@ code { color: #e7515a; }
     user-select: none;
     -webkit-user-drag: none;
     -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
-    top: 106px;
+    top: 54px;
     left: 16px;
 }
 .sidebar-theme { background: transparent; }
@@ -776,11 +776,11 @@ code { color: #e7515a; }
     position: relative;
     margin: auto;
     width: 100%;
-    height: calc(100vh - 127px)!important;
+    height: 100vh;
     overflow: hidden;
 }
 #sidebar ul.menu-categories.ps {
-    height: calc(100vh - 107px)!important;
+    height: 100vh;
     margin-right: 0;
     padding-right: 22px;
     border-right: 1px solid #0e1726;
